[package]
name = "aoc23"
version = "0.1.0"
edition = "2021"



[[bin]]
name ="day01"
path = "src/day1.rs"

[[bin]]
name ="day02"
path = "src/day2.rs"

[[bin]]
name ="day03"
path = "src/day3.rs"

[[bin]]
name ="day04"
path = "src/day4.rs"


[[bin]]
name ="day05"
path = "src/day5.rs"

[[bin]]
name ="day22"
path = "src/day22.rs"


[[bin]]
name ="day22m"
path = "src/day22m.rs"



[[bin]]
name ="test"
path = "src/test.rs"



[dependencies]

nom = "7"
regex = "1"
